test_data/Xml/Unexpected/Unserializable/InvalidClassName/langStringDefinitionTypeIec61360/wrong.xml.exception
Expected an element representing an instance of class LangStringDefinitionTypeIec61360 with element name langStringDefinitionTypeIec61360, but got: utterlyInvalid at: the beginning